k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels: 
    app: mysql
spec:
  serviceName: mysql-h
  #podManagementPolicy:  Parallel
  selector:
    matchLabels:
      app: mysql
  replicas: 4
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts: 
            - mountPath: /var/lib/mysql
              name: mysql-volume

  volumeClaimTemplates:
      - metadata:
          name: mysql-volume
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 1Gi
