k8s/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-load-balancer
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8000
    protocol: TCP
