k8s/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8000
    protocol: TCP
    nodePort: 30001 #range:30000-32767
